@@ -3,16 +3,17 @@ package cz.vse.swoe.ontodeside.patomat2.model;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
-public record PatternInstance(int id, @JsonIgnore Pattern pattern, PatternMatch match, String sparqlInsert, String sparqlDelete,
+public record PatternInstance(int id, @JsonIgnore Pattern pattern, PatternMatch match, String sparqlInsert,
+                              String sparqlDelete,
                               List<NewEntity> newEntities) {
 
     public PatternInstance deepCopy() {
-        return new PatternInstance(id, pattern, match, sparqlInsert, sparqlDelete, new ArrayList<>(newEntities.stream()
-                                                                                                                .map(ne -> new NewEntity(ne.variableName(), ne.identifier(), ne.labels()))
-                                                                                                                .toList()));
+        return new PatternInstance(id, pattern, match, sparqlInsert, sparqlDelete, newEntities.stream()
+                                                                                              .map(ne -> new NewEntity(ne.variableName(), ne.identifier(), ne.labels()))
+                                                                                              .collect(Collectors.toList()));
     }
 
     @JsonProperty
@@ -22,5 +23,9 @@ public record PatternInstance(int id, @JsonIgnore Pattern pattern, PatternMatch 
 
     public boolean hasDelete() {
         return sparqlDelete != null;
+    }
+
+    public PatternInstance withNewEntities(List<NewEntity> newEntities) {
+        return new PatternInstance(id, pattern, match, sparqlInsert, sparqlDelete, newEntities);
     }
 }
